--- a/buildspec.yml
+++ b/buildspec.yml
@@ -2,10 +2,10 @@ version: 0.2
 
 phases:
   install:
-    runtime-versions:
-      nodejs: 18
     commands:
-      - echo Installing dependencies...
+      - echo Installing Node.js...
+      - n 22
+      - node -v  # Check the installed Node.js version
       - npm install --legacy-peer-deps
 
   build:
