--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "react": "^18.2.0",
     "react-leaflet": "^4.0.1",
     "wouter": "2.9.0",
-    "xstate": "4.34.0"
+    "xstate": "^4.35.3"
   },
   "devDependencies": {
     "@types/geojson": "^7946.0.10",
