--- a/buildspec.yml
+++ b/buildspec.yml
@@ -6,7 +6,7 @@ phases:
       nodejs: 18
     commands:
       - echo "Installing dependencies..."
-      - npm install --legacy-peer-deps
+      - npm install
       - echo "Checking file permissions..."
       - ls -la node_modules/.bin
       - ls -la node_modules/.bin/tsup
