update yml again

--- a/buildspec.yml
+++ b/buildspec.yml
@@ -3,10 +3,11 @@ version: 0.2
 phases:
   install:
     runtime-versions:
-      nodejs: 18
+      nodejs: 18.x
     commands:
       - echo "Installing dependencies..."
       - npm install
+      - npm install -g tsup
       - echo "Checking file permissions..."
       - ls -la node_modules/.bin
       - ls -la node_modules/.bin/tsup
