--- a/buildspec.yml
+++ b/buildspec.yml
@@ -3,7 +3,7 @@ version: 0.2
 phases:
   install:
     runtime-versions:
-      nodejs: 18.x
+      nodejs: 18.16.0
     commands:
       - echo "Installing dependencies..."
       - npm install
@@ -19,6 +19,9 @@ phases:
       - echo "Building the project..."
       - export PATH=$PATH:./node_modules/.bin
       - npm run build
+
+environment:
+  image: aws/codebuild/nodejs:18.16.0
 
 artifacts:
   files:
